@@ -13,7 +13,8 @@
 * Paymill: Add support for specifying the :customer [Sbastien]
 * Realex: Correct AVS input format [ExxKA]
 * USAEpay Transaction: Use sandbox when in test mode [radar]
-* Braintree Blue: do not use global config [rdj]
+* Braintree Blue: Do not use global config [rdj]
+* eWay Rapid: Add response messages [BenZhang]
 
 == Version 1.38.1 (September 16, 2013)
 
